# geode-badges

./: .gitignore  CMakeLists.txt  README.md  about.md  badgesforplayers.txt  build_errors.txt  mod.json
build_x64/: CMakeCache.txt
src/: main.cpp
